# ICPLog

./: .gitignore  CMakeLists.txt  README.md
include/icplog/: common.h  formatter.h  level.h  pattern_formatter.h
include/icplog/details/: log_msg.h  utils.h
include/icplog/sinks/: base_sink.h  console_sink.h
src/: CMakeLists.txt  formatter.cpp  level.cpp  pattern_formatter.cpp
src/details/: utils.cpp
tests/: CMakeLists.txt  test_formatter.cpp  test_level.cpp  test_sink.cpp
